# synco

./: .gitignore  Cargo.toml  README.md
assets/: banner.txt
src/: broadcast.rs  challenge.rs  connection.rs  consts.rs  device_manager.rs  keychain.rs  machine_utils.rs  main.rs  server.rs  state.rs  tcp_utils.rs  utils.rs
src/client/: cert.rs  connection.rs  mod.rs
src/diff/: consts.rs  mod.rs  model.rs  util.rs
src/menu/: file.rs  mod.rs  server.rs  sync.rs
src/server/: mod.rs  model.rs  tls_utils.rs  util.rs
src/ui/: app.rs  chain.rs  files.rs  logs.rs  mod.rs  network.rs  performance.rs  settings.rs
