[package]
name = "synco"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6"
clap = "4.5.40"
local-ip-address = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
pkcs8 = "0.9.0"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["net", "rt", "rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1.17.0", features = ["v4"] }
rand = { version = "0.8" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
blake3 = "1.8.2"
base32 = "0.5.1"
base64 = "0.22.1"
rcgen = { version = "0.13.2", features = ["x509-parser"] }
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
mio = "1.0.3"
spki = "0.7.3"
